# LunaCore

./: .gitignore  CMakeLists.txt  README.md
assets/fonts/: .gitignore
assets/fonts/Roboto/: .gitignore
include/: ElementBufferObject.h  ImGuiSDLGL.h  Renderer.h  SDLGL-window.h  SDLGL.h  SDLGLwindow.h  Shader.h  ShaderC.h  VertexArrayObject.h  VertexBufferObject.h  app.h  fps.h  frameTime.h  imgui_c.h  main.h  renderer.h  resources.h  wayWindowGL.h
include/buffer/: ElementBufferObject.h  VertexArrayObject.h  VertexBufferObject.h
include/wrappers/: Buffer.h  ImGuiSDLGL.h  SDLGL.h
lib/SDL2/x86_64-w64-mingw32/lib/cmake/SDL2/: sdl2-config.cmake
shader/: fragmentShader.frag  vertexShader.vert
src/: App.cpp  FPS.cpp  Renderer.cpp  SDLGL-window.cpp  SDLGL-window.h.cpp  SDLGLwindow.cpp  Shader.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp  app.c  app.cpp  fps.c  fps.cpp  frameTime.c  imgui_c.cpp  main.c  mygame.c  renderer.c  resources.c  shader.c  wayWindowGL.c
src/buffer/: VertexBufferObject.cpp
src/openGLobjects/: ElementBufferObject.cpp
